--- a/00-computer-setup.Rmd
+++ b/00-computer-setup.Rmd
@@ -84,10 +84,51 @@ output: html_document
   error messages.
 
 
+### Editing the Course Website
+
+The course website can be edited by changing the html files in the course GitHub repository located at <https://github.com/jescoyle/BIO202>.
+
+#### If you don't want to work with git
+
+1. Go to the course GitHub repository above.
+2. Click on the .Rmd file for the lesson you want to edit.
+3. Click the Raw button in the upper right corner.
+4. When the page with text opens, download the file and save it as a .Rmd file. Make sure to remove any .txt extensions that may be automatically added.
+5. Open and edit the .Rmd file in R Studio. Use the 'Knit' button to convert the file to an html to check your changes.
+6. When you as satisfied, email the .Rmd file to Jes no later than 8 am on the day you present.
+
+
+#### If you are new to git, but want to learn
+
+See the section below on installing git on your computer.
+
+Attend the git tutorial provided at the beginning of class.
+
+Use the 'If yu are familiar with git' workflow below to make changes to the course website.
+
+
+#### If you are familiar with git
+
+
+The general workflow is:
+
+1. If you have not aready done so, fork the repository to your account and clone a local copy on your computer. [Instructions](). This only needs to be done once.
+2. Make sure your copy is up to date.
+3. Work on the .Rmd file for your lesson in R Studio. Click 'Knit' to render your changes as an html file and view them in your browser. Note that any edits you make are only on your computer until you submit a pull request to merge your changes to the repository.
+4. Use `git commit -m "changes you made"` to save your changes to your local repository.
+5. Use `git push origin master` to push your local changes to your fork on your account.
+6. Submit a pull request on GitHub to merge your changes with the original BIO202 repository no later than 8 am on the day you present.
+
+
+
+
 ### git
 
 
-[[INCLUDE INSTRUCTIONS FOR DOWNLOADING GIT AND INTEGRATING WITH RSTUDIO]]
+TO DO: 
+
+* INCLUDE INSTRUCTIONS FOR DOWNLOADING GIT AND INTEGRATING WITH RSTUDIO
+* Link to git lesson content on SWC
 
 
 
