--- a/00-computer-setup.Rmd
+++ b/00-computer-setup.Rmd
@@ -100,7 +100,7 @@ The course website can be edited by changing the html files in the course GitHub
 
 See the section below on installing git on your computer.
 
-Attend the git tutorial provided at the beginning of class.
+Attend the git tutorial during class on Monday Oct 2nd (week 2).
 
 Use the 'If you are familiar with git' workflow below to make changes to the course website.
 
@@ -120,18 +120,34 @@ The general workflow is:
 6. Submit a pull request on GitHub to merge the changes on your fork with the original BIO202 repository on FukamiLab no later than 8 am on the day you present. Jes or Tad will approve your pull request.
 
 
+### Git
 
+#### Windows
 
-### git
+1. Download the git installer for Windows [here](https://git-for-windows.github.io/). This will install bash, which is a command-line shell program for interacting with files and programs on your computer.
+2. Run the installer that you just downloaded. Click "Next" as needed and when you get to the following options make sure that you:
+  + Select "Use Git from the Windows Command Prompt". 
+  + Keep "Checkout Windows-style, commit Unix-style line endings" selected.
+  + Select "Use Windows' default console window".
+  + If you forgot to do any of these, rerun the installer and select the appropriate options.
+3. That's it! You should now have three new programs installed in a folder called Git under your Progra Files.
 
+#### macOS
 
-TO DO: 
+Follow the instructions below or view this [video tutorial](https://www.youtube.com/watch?v=9LQhwETCdwY).
 
-* INCLUDE INSTRUCTIONS FOR DOWNLOADING GIT AND INTEGRATING WITH RSTUDIO
-* Link to git lesson content on SWC
+1. Go to [this list](https://sourceforge.net/projects/git-osx-installer/files/) and download an installer for Git.
+  + If you are using OS X 10.9 and higher, choose the most recent version for "mavericks".
+  + If you are using an earlier version of OS X, choose the most recent version for "snow leopard".
+2. Run the installer you downloaded.
+3. After installing Git, there will not be anything in your /Applications folder, because Git is a command line program.
 
+Note: if you have OSX El Capitan you may experience some errors when running Git if you don't have an updated XCODE. [Here](https://stackoverflow.com/questions/32893412/command-line-tools-not-working-os-x-el-capitan-macos-sierra) is a description of the issue on StackOverflow and the solution is to open a Terminal window and type `xcode-select --install`.
 
+#### Linux
+
+You may already have Git installed. If not, you can try to install it via your distro’s package manager. For Debian/Ubuntu run `sudo apt-get install git` and for Fedora run `sudo yum install git`.
 
 #### Attribution
 
-The content of this webpage was derived from [Data Carpentry](http://datacarpentry.org) materials (Copyriright (c) Data Carpentry) under CC-3.0 Attribution License (see [http://creativecommons.org/licenses/by/3.0/](http://creativecommons.org/licenses/by/3.0/)). 
+The content of this webpage was derived from [Data Carpentry](http://datacarpentry.org) and [Software Carpentry](http://software-carpentry.org) materials (Copyriright (c) Data Carpentry) under CC-3.0 Attribution License (see [http://creativecommons.org/licenses/by/3.0/](http://creativecommons.org/licenses/by/3.0/)). 
