--- a/00-computer-setup.Rmd
+++ b/00-computer-setup.Rmd
@@ -81,6 +81,7 @@ output: html_document
 * Once it's installed, open RStudio to make sure it works and you don't get any
   error messages.
 
+***
 
 ### Editing the Course Website
 
@@ -98,11 +99,9 @@ The course website can be edited by changing the html files in the course GitHub
 
 #### If you are new to git, but want to learn
 
-See the section below on installing git on your computer.
-
-Attend the git tutorial during class on Monday Oct 2nd (week 2).
-
-Use the 'If you are familiar with git' workflow below to make changes to the course website.
+1. Install Git on your computer using the instructions in the section below. 
+2. Attend the Git tutorial during class on Monday Oct 2nd (week 2).
+3. Use the 'If you are familiar with git' workflow below to make changes to the course website.
 
 
 #### If you are familiar with git
@@ -112,13 +111,14 @@ The general workflow is:
 
 1. If you have not aready done so, fork the repository from https://github.com/FukamiLab/BIO202 to your account on GitHub. Then clone a local copy of this forked repository (from your own GitHub account) to your computer. [Instructions](). This only needs to be done once.
 2. Before you start working:
-  + Make sure your copy is up to date with the FukamiLab repository on GitHub. If not, submit a Pull request to update it. [Instructions]()
-  + Make sure your local repository on your computer is up to date with your fork of the repository on your GitHub account using `git pull`.
+    + Make sure your copy is up to date with the FukamiLab repository on GitHub. If not, submit a Pull request to update it. [Instructions]()
+    + Make sure your local repository on your computer is up to date with your fork of the repository on your GitHub account using `git pull`.
 3. Work on the .Rmd file for your lesson in R Studio on your computer. Click 'Knit' to render your changes as an html file and view them in your browser. Note that any edits you make are only on your computer until you submit a pull request to merge your changes to the repository. Make sure that when you have made your last edit to the .Rmd file you click 'Knit' so that an up-to-date html file is generated. The html file will be the one that appears on the website.
 4. Commit the changes you make periodically to your local repository using `git commit -m "changes you made"`.
 5. When you are finished, push the commits from your local repository to your fork on your GitHub account using `git push origin master`.
 6. Submit a pull request on GitHub to merge the changes on your fork with the original BIO202 repository on FukamiLab no later than 8 am on the day you present. Jes or Tad will approve your pull request.
 
+***
 
 ### Git
 
@@ -126,10 +126,10 @@ The general workflow is:
 
 1. Download the git installer for Windows [here](https://git-for-windows.github.io/). This will install bash, which is a command-line shell program for interacting with files and programs on your computer.
 2. Run the installer that you just downloaded. Click "Next" as needed and when you get to the following options make sure that you:
-  + Select "Use Git from the Windows Command Prompt". 
-  + Keep "Checkout Windows-style, commit Unix-style line endings" selected.
-  + Select "Use Windows' default console window".
-  + If you forgot to do any of these, rerun the installer and select the appropriate options.
+    + Select "Use Git from the Windows Command Prompt". 
+    + Keep "Checkout Windows-style, commit Unix-style line endings" selected.
+    + Select "Use Windows' default console window".
+    + If you forgot to do any of these, rerun the installer and select the appropriate options.
 3. That's it! You should now have three new programs installed in a folder called Git under your Progra Files.
 
 #### macOS
@@ -137,8 +137,8 @@ The general workflow is:
 Follow the instructions below or view this [video tutorial](https://www.youtube.com/watch?v=9LQhwETCdwY).
 
 1. Go to [this list](https://sourceforge.net/projects/git-osx-installer/files/) and download an installer for Git.
-  + If you are using OS X 10.9 and higher, choose the most recent version for "mavericks".
-  + If you are using an earlier version of OS X, choose the most recent version for "snow leopard".
+    + If you are using OS X 10.9 and higher, choose the most recent version for "mavericks".
+    + If you are using an earlier version of OS X, choose the most recent version for "snow leopard".
 2. Run the installer you downloaded.
 3. After installing Git, there will not be anything in your /Applications folder, because Git is a command line program.
 
@@ -148,6 +148,8 @@ Note: if you have OSX El Capitan you may experience some errors when running Git
 
 You may already have Git installed. If not, you can try to install it via your distro’s package manager. For Debian/Ubuntu run `sudo apt-get install git` and for Fedora run `sudo yum install git`.
 
-#### Attribution
+***
 
-The content of this webpage was derived from [Data Carpentry](http://datacarpentry.org) and [Software Carpentry](http://software-carpentry.org) materials (Copyriright (c) Data Carpentry) under CC-3.0 Attribution License (see [http://creativecommons.org/licenses/by/3.0/](http://creativecommons.org/licenses/by/3.0/)). 
+> Attribution
+>
+> The content of this webpage was derived from [Data Carpentry](http://datacarpentry.org) and [Software Carpentry](http://software-carpentry.org) materials (Copyright (c) Data Carpentry) under CC-3.0 Attribution License (see [http://creativecommons.org/licenses/by/3.0/](http://creativecommons.org/licenses/by/3.0/)). 
