--- a/index.Rmd
+++ b/index.Rmd
@@ -35,9 +35,9 @@ Each student will complete the results section to include in a paper to submit f
 | 1    | Mon | Sept. 25 | Intro to R & RStudio                          | Tad     | XXX        |
 |      | Wed | Sept. 27 | Topic selection, Intro to R markdown & class website | Jes     | XXX   |
 |      | Fri | Sept. 29 | Intro to ggplot2                              | Jes     | XXX        |
-| 2    | Mon | Oct. 2   | Intro to GitHub & git (optional)              | Jes     | XXX        |
-|      | Wed | Oct. 4   | R workshop                                    | Jes     | XXX        |
-|      | Fri | Oct. 6   | Each person introduces their questions & data |     | XXX        |
+| 2    | Mon | Oct. 2   | R workshop (optional)                         | Jes     | XXX        |
+|      | Wed | Oct. 4   | Intro to GitHub & git (optional)              | Jes     | XXX        |
+|      | Fri | Oct. 6   | Each person introduces their questions & data |         | XXX        |
 | 3    | Mon | Oct. 9   | Topic 1. Data exploration                     | Tad     |            |
 |      | Wed | Oct. 11  | Topic 2. Linear models                        | Tad     |            |
 |      | Fri | Oct. 13  | Topic 3. Dealing with heterogeneity           | Tad     |            |
