Redcued the size of headings in the example lesson.

--- a/00-example-lesson.Rmd
+++ b/00-example-lesson.Rmd
@@ -31,14 +31,14 @@ knitr::opts_chunk$set(fig.path = "images/")
 repo_url <- "https://raw.githubusercontent.com/fukamilab/BIO202/master/"
 ```
 
-## Key Points
+### Key Points
 
 The instructor will fill in a description of the topic here followed by a bulleted list describing key features of the statistical analysis method. For example:
 
 * When to use this analysis
 * When *not* to use this analysis
 
-## Analysis Example
+### Analysis Example
 
 The student discussion leader will place their example code in this section, including text that describe the purpose of each code block.
 
@@ -86,7 +86,7 @@ plot(Tot_chl_DW ~ Chla2b, data = fol_dat,
 **Figure 1. Total chlorophyll versus ratio of chlorophyll A to B.** Looks like we have some data cleaning to do! 
 
 
-## Discussion Questions
+### Discussion Questions
 
 Include any questions or issues here that you want to discuss or ask about in class. After the class session, update this section with any important notes discussed.
 
